# quadratic-decomposition

./: Cargo.toml
shaders/: blit.frag  blit.vert  curve.frag  curve.vert
src/: main.rs  pipelines.rs  renderer.rs
src/cache/: buffer.rs  mod.rs
