[package]
name = "quadratic-decomposition"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4"
cgmath = "0.17"
futures = "0.3"
lazy_static = "1.4"
memoffset = "0.5"
itertools = "0.9"
wgpu = "0.6"
winit = "0.23"

[build-dependencies]
shaderc = "0.6"
